--- a/www/All Device Categories.html
+++ b/www/All Device Categories.html
@@ -48,6 +48,9 @@
 			}
 		</script>
 
+	<!--Jquery e roba per mobile-->
+	<script src="http://code.jquery.com/mobile/latest/jquery.mobile.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
