--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,10 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/creative.css" type="text/css">
+	
+	<!--Jquery e roba per mobile-->
+	<script src="http://code.jquery.com/mobile/latest/jquery.mobile.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
