--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,29 @@
 	<!--Jquery e roba per mobile-->
 	<script src="http://code.jquery.com/mobile/latest/jquery.mobile.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Good default declaration:
+    * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
+    * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
+    * Disables use of eval() and inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
+        * Enable inline JS: add 'unsafe-inline' to default-src
+        * Enable eval(): add 'unsafe-eval' to default-src
+-->
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">
+
+	<!-- Allow everything but only from the same origin and foo.com -->
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self' foo.com">
+
+	<!-- This policy allows everything (eg CSS, AJAX, object, frame, media, etc) except that 
+		* CSS only from the same origin and inline styles,
+		* scripts only from the same origin and inline styles, and eval()
+	-->
+	<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+
+	<!-- Allows XHRs only over HTTPS on the same domain. -->
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self' https:">
+
+	<!-- Allow iframe to https://cordova.apache.org/ -->
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self'; frame-src 'self' https://cordova.apache.org">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
