--- a/www/index.html
+++ b/www/index.html
@@ -27,14 +27,19 @@
 	
 	<!--Jquery e roba per mobile-->
 	<script src="http://code.jquery.com/mobile/latest/jquery.mobile.min.js"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1,
+width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
 	<!-- This policy allows everything (eg CSS, AJAX, object, frame, media, etc) except that 
 		* CSS only from the same origin and inline styles,
 		* scripts only from the same origin and inline styles, and eval()
 	-->
 	<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
-
+ 
+ <script type="text/javascript">
+  app.initialize();
+</script>
+<script type="text/javascript" src="cordova.js"></script>
 
 </head>
 
