--- a/www/All Device Categories.html
+++ b/www/All Device Categories.html
@@ -49,15 +49,8 @@
 		</script>
 
 	<!--Jquery e roba per mobile-->
-	<script src="http://code.jquery.com/mobile/latest/jquery.mobile.min.js"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<!-- This policy allows everything (eg CSS, AJAX, object, frame, media, etc) except that 
-		* CSS only from the same origin and inline styles,
-		* scripts only from the same origin and inline styles, and eval()
-	-->
-	<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
-
+	<meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
+	
 </head>
 
 <body id="page-top" OnLoad="setup()">
