--- a/All Device Categories.html
+++ b/All Device Categories.html
@@ -32,7 +32,7 @@
 		<script>
 			function setup(){
 				$.ajax({
-					url: "/php/AllDeviceCategories.php", //Relative or absolute path to response.php file
+					url: "http://bigbandroid.altervista.org/php/AllDeviceCategories.php", //Relative or absolute path to response.php file
 					//dataType: "json",
 					success: function(data) {
 						$(".row").html
