--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 </br></br><h1 color="#f05f40">Telecom Italia Mobile</h1>
                 <hr>
                 <p>Best of technology, networking and comunication</p>
-                <a href="Who We Are.php" class="btn btn-primary btn-xl page-scroll">Who we are</a>
+                <a href="http://bigbandroid.altervista.org/Who We Are.php" class="btn btn-primary btn-xl page-scroll">Who we are</a>
 				<br/>
 				<br/>
-				<a href="Group of Telecom Italia.php" class="btn btn-primary btn-xl page-scroll">Group of Telecom Italia</a>
+				<a href="http://bigbandroid.altervista.org/Group of Telecom Italia.php" class="btn btn-primary btn-xl page-scroll">Group of Telecom Italia</a>
             </div>
         </div>
     </header>
